# thesis-review-system

./: .env  .env.example  pyproject.toml
config/: settings.py
templates/base/: base.html  thesis_dashboard_base.html
templates/include/: document_list_tab.html  logbook_list.html  navbar.html
templates/registration/: about.html  login.html  result-report-pdf.html  teacher_list.html  user_create.html  user_update.html
templates/thesis/: document_list.html  group_create.html  group_join.html  group_update.html
website/registration/: admin.py  models.py  views.py
website/registration/migrations/: 0016_auto_20220626_2033.py
website/thesis/: admin.py  forms.py  models.py  urls.py  views.py
website/thesis/migrations/: 0012_auto_20220626_1354.py  0013_auto_20220626_2033.py  0014_document_user.py  0015_auto_20220626_2203.py  0016_logbook_author.py
