[tool.poetry]
name = "thesis-review-system"
version = "0.0.1"
description = "Thesis Review System aimed at providing students and teachers with a platform for easy communication"
authors = ["Shakib Hossain <shakib609@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.7"
Pillow = "^7.1.2"
python-magic = "^0.4.18"
environs = "^8.0.0"
django-weasyprint = "^1.0.1"
psycopg2 = "2.8.6"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
